Bug 403471 - Application Dashboard when called through Meta blocks Latte and stops hiding itself when needed
Summary: Application Dashboard when called through Meta blocks Latte and stops hiding ...
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: git (master)
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-21 17:37 UTC by Michał Dybczak
Modified: 2019-01-23 23:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michał Dybczak 2019-01-21 17:37:47 UTC
SUMMARY

Latte dock is not hiding under certain circumstances.

STEPS TO REPRODUCE
1. Use Firefox in maximized mode (haven't tried if a different browser causes the same result yet)
2. Use forum based on Discourse, post, edit an entry/comment/topic. Sometimes it happens on other sides but it's mainly connected to input boxes or places where we can type something online.


OBSERVED RESULT


Latte dock at some point stopped hiding. Switching to other hide mode works, for a moment then it's the same and one need to switch again. Or simply open latte settings is enough to bring it back to normal. This started to happen frequently since a week or so, after the update. Earlier I could observer the same but eventually, latte was hiding, now it's like stuck, no matter if I have "dodge active" or "dodge maximized". 

The bug showed up even while typing this bug report here. It is as if having a cursor inside input text box was treated as "non focused window". Clicking on other parts of the site isn't helping thou. The dock is not hiding away.
The only solution is to open latte's setting and closing them. After that dock is hiding... for a while.

It's hard to trigger this bug deliberately. It happens frequently when I'm doing something in a browser, but never when I observe... so I can't say what specific action I'm doing, because when I'm doing it, I'm focused on something else.

EXPECTED RESULT
Latte auto-hiding options should work.


SOFTWARE/OS VERSIONS

Linux/KDE Plasma: 
System operacyjny: Manjaro Linux 
Wersja Plazmy KDE: 5.14.5
Wersja Qt: 5.12.0
Wersja Szkieletów KDE: 5.54.0
Wersja jądra: 4.20.3-1-MANJARO
Architektura systemu: 64-bity
Procesorów: 8 × Intel® Core™ i7-6700HQ CPU @ 2.60GHz
Pamięć: 7,7 GiB RAM-u

ADDITIONAL INFORMATION
Comment 1 Michail Vourlakos 2019-01-21 18:22:38 UTC
the thing is that I can not reproduce...

Is there a chance that this is produced in your system after you drag a window from a Latte panel empty area?
Comment 2 Michał Dybczak 2019-01-21 18:32:02 UTC
I'll try to figure out specific. If I want the bug to happen, I also can't reproduce it.

I was ignoring it although it was very annoying. Lately, it happens so often I decided to post a report in hope that somehow we uncover what is causing it.
Anyway, I'll post additional info when I observe more.

At some point, I have to notice what is triggering it. It would be easy to record it on video but that wouldn't be helpful. The trigger is what tells us more.

As to dragging window, I don't know what you mean. I don't drag windows so I doubt this is it anyway.
Comment 3 Michał Dybczak 2019-01-22 19:42:01 UTC
Ok, I have some info.

I noticed, the problem occurs when I hit meta key to call programs darshboard. After that, Latte is stuck and no program makes it hide. It's 100% reproducible that way.

The second way is just temporal. Go to Thunderbird, click on some link in email it opens a tab in the browser and then Latte shows up over the site for a while (ca 10s) then it hides.
Comment 4 Michail Vourlakos 2019-01-22 20:54:46 UTC
(In reply to Michał Dybczak from comment #3)
> Ok, I have some info.
> 
> I noticed, the problem occurs when I hit meta key to call programs
> darshboard. After that, Latte is stuck and no program makes it hide. It's
> 100% reproducible that way.
> 

A. not in my system, it works just fine

> The second way is just temporal. Go to Thunderbird, click on some link in
> email it opens a tab in the browser and then Latte shows up over the site
> for a while (ca 10s) then it hides.

B. sorry I dont use Thunderbird but I wouldnt be surprised if thunderbird like firefox in the past is sending too many X11 windows messages with no real reason.  

1. For case A I will need your layout file in order to test it in my system
2. For case B do you see very high cpu usage for Latte when it is stuck?
3. Can you create a video for case A and share it through google drive? (please do not use youtube for issues)
Comment 5 Michail Vourlakos 2019-01-22 21:02:08 UTC
(In reply to Michał Dybczak from comment #3)
> Ok, I have some info.
> 
> I noticed, the problem occurs when I hit meta key to call programs
> darshboard. After that, Latte is stuck and no program makes it hide. It's
> 100% reproducible that way.
> 

Ok! I managed to reproduce this for (A), I will have to think it over how it can be solved without breaking all the Latte global shortcuts experience...

I will make this bug only relevant to (A), for (B) you should open a new report because they are totally different...
Comment 6 Michał Dybczak 2019-01-22 21:29:41 UTC
B issue is not so troubling. It's just lingering a bit longer then it should before hiding, but that's just a very minor annoyance, so at the moment let's forget it.

As to latte shortcuts, this needs to be rethought. I am not a fan of this feature. I never needed it and when it came back it hijacked many of shortcuts. When I want to assign a new shortcut, it is usually taken... with latte so I have to override it. It's not blocking anything but still, this is annoying. I wish I could disable all latte shortcuts with one switch. Latte shortcuts are too aggressive and they never should have override existing shortcuts.

Anyway, sorry to be the bearer of bad news. I suspect I added a lot of work but meta key is frequently used so it keeps freezing my dock constantly and sooner or later others would complain about it too.

If you want, you can watch the video (I will delete it in a couple of weeks):

https://drive.google.com/open?id=1hiZ9JN2WJ_3hkvXEGHp5KZf5RR0qf8PL
Comment 7 Michail Vourlakos 2019-01-23 07:38:43 UTC
(In reply to Michał Dybczak from comment #6)
> 
> As to latte shortcuts, this needs to be rethought. I am not a fan of this
> feature. I never needed it and when it came back it hijacked many of
> shortcuts. When I want to assign a new shortcut, it is usually taken... with
> latte so I have to override it. It's not blocking anything but still, this
> is annoying. I wish I could disable all latte shortcuts with one switch.

this is how it is designed from kde kglobalaccel which is responsible for global shortcuts. When a new app is run it requests from kglobalaccel some global shortcuts. If some of them are already taken then they are not assigned to the new app, but if they are free then assigned directly. Personally I find it just fine... All global shortcuts have an interface if you want to disable them from Global Shortcuts->Latte Dock. You can disable them all them in that interface, even though it would request from you a few more clicks (you can request from plasma devs a "Disable All" button in there), this is needed only once, after the first time you run Latte


> Latte shortcuts are too aggressive and they never should have override
> existing shortcuts.
> 

they dont override existing shortcuts that is a fault assumption

> Anyway, sorry to be the bearer of bad news. I suspect I added a lot of work
> but meta key is frequently used so it keeps freezing my dock constantly 

the issue is not from Meta key, the issue is from Application Dashboard because Latte makes the assumption that when it is closed as a normal applet informs Latte about it which is not the case. All other application launchers work just fine with that behavior
Comment 8 Michail Vourlakos 2019-01-23 07:48:44 UTC
Ok, this is easily fixed I think, it just needs investigation...

If I use the Latte global shortcuts it works just fine, so if instead of "Meta" I use "Meta+1" which a Latte activate entry shortcut it works ok...

just a comparison between the two code paths will probably provide a solution
Comment 9 Michał Dybczak 2019-01-23 09:55:43 UTC
(In reply to Michail Vourlakos from comment #7)
> All global shortcuts have an interface if
> you want to disable them from Global Shortcuts->Latte Dock. You can disable
> them all them in that interface, even though it would request from you a few
> more clicks (you can request from plasma devs a "Disable All" button in
> there), this is needed only once, after the first time you run Latte

Right.


> > Latte shortcuts are too aggressive and they never should have override
> > existing shortcuts.
> > 
> 
> they dont override existing shortcuts that is a fault assumption

Hm... I was sure they did. I also noticed weird desktop behavior after updating latte with that change at I noticed latte interface opening accidentally. But maybe I'm wrong and I simply triggered those new (previously empty) shortcuts. This was a while ago and now it works fine so I won't argue :).
Or maybe those were just some early bugs of that new feature, I think I saw some issues posted and resolved that were tied to shortcuts. This is a charm of using a git version ;).

Meta key alone is somehow differently treated by Plasma so it is possible that the same code with meta+something will not work in the same way with meta alone. In such case, we may have to post a Plasma bug to fix that? I'm curious how it unravels.

When you figure it out and post a commit, let me know and I'll test if it works on my end before closing this as solved.
Comment 10 Michail Vourlakos 2019-01-23 21:05:22 UTC
Git commit 62033157f675bee68b969fb280578dd2a0102123 by Michail Vourlakos.
Committed on 23/01/2019 at 21:02.
Pushed by mvourlakos into branch 'master'.

unblock View after AppLaucher shortcut trigger

--the Application Launcher triggering through global
shortcuts (codepath) was missing a release for
visibilitymanager in order to work correctly after
the applet trigerring.

M  +6    -0    app/globalshortcuts.cpp

https://commits.kde.org/latte-dock/62033157f675bee68b969fb280578dd2a0102123
Comment 11 Michał Dybczak 2019-01-23 23:12:50 UTC
Wow, that was quick! Installed and it looks like it's working like a charm. I can hit meta as many times I want, latte is hiding correctly!
Thanks!