unblock View after AppLaucher shortcut trigger

--the Application Launcher triggering through global
shortcuts (codepath) was missing a release for
visibilitymanager in order to work correctly after
the applet trigerring.

BUG: 403471